--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <section class="bg-blue-100 w-9/12 mx-auto  mt-12 p-8">
             <h3 class="text-3xl mb-6 mt-5">Please Login</h3>
             <div>
-                 <input class="w-9/12 block mb-4 px-3 py-2 rounded-lg" type="email" name="" id="" placeholder="Your email">
-                <input class="w-9/12 block mb-4 px-3 py-2 rounded-lg" type="password" name="" id="" placeholder="Your password">
-                <button class="bg-amber-600 hover:bg-sky-700 text-white px-8 py-2 rounded-lg font-semibold" >Submit</button>
+                 <input class="w-9/12 block mb-4 px-3 py-2 rounded-lg" type="email" name="" id="user-email" placeholder="Your email">
+                <input class="w-9/12 block mb-4 px-3 py-2 rounded-lg" type="password" name="" id="user-password" placeholder="Your password">
+                <button id="btn-submit" class="bg-amber-600 hover:bg-sky-700 text-white px-8 py-2 rounded-lg font-semibold">Submit</button>
             </div>
         </section>
     </main>
+    <script src="js/login.js"></script>
 </body>
 </html>
