Updated deposit and balance and handled string add

--- a/bank.html
+++ b/bank.html
@@ -20,7 +20,8 @@
             <div class="grid grid-cols-3 gap-4 w-9/12 mx-auto">
                 <div class="bg-green-400 p-8 rounded-xl">
                     <h4 class="text-2xl">Deposit</h4>
-                    <h2 class="text-5xl">$00</h2>
+                    <h2 class="text-5xl">$<span id="deposit-total">00</span></h2>
+                      
                 </div>
                 <div class="bg-yellow-400 p-8 rounded-xl">
                     <h4 class="text-2xl">Withdraw</h4>
@@ -28,23 +29,25 @@
                 </div>
                 <div class="bg-violet-400 p-8 rounded-xl">
                     <h4 class="text-2xl">Balance</h4>
-                    <h2 class="text-5xl">$00</h2>
+                    <h2 class="text-5xl">$<span id="balance-total">1200</span></h2>
                 </div>
             </div>
         </section>
         <!-- deposit and withdraw section -->
         <section class="mt-12">
             <div class="grid grid-cols-2 gap-4 w-9/12 mx-auto">
-                <div class="bg-sky-300 p-8 rounded-xl">
+                <div class="bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 ... p-8 rounded-xl">
                     <h4 class="text-2xl mb-3 text-white">Please Deposit</h4>
-                    <input class="w-9/12 block mb-4 px-3 py-2 rounded-lg" type="email" name="" id="user-email"
+
+                    <input class="w-9/12 block mb-4 px-3 py-2 rounded-lg" type="email" name="" id="deposit-input"
                         placeholder="$ Amount to Deposit">
+
                     <button id="btn-deposit"
                         class="bg-sky-700 hover:bg-amber-600 text-white px-8 py-2 rounded-lg font-bold">Deposit</button>
                 </div>
-                <div class="bg-fuchsia-300 p-8 rounded-xl">
+                <div class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 hover:from-pink-500 hover:to-yellow-500 ... p-8 rounded-xl">
                     <h4 class="text-2xl mb-3 text-white">Please Withdraw</h4>
-                    <input class="w-9/12 block mb-4 px-3 py-2 rounded-lg" type="email" name="" id="user-email"
+                    <input class="w-9/12 block mb-4 px-3 py-2 rounded-lg" type="email" name="" id="withdraw-amount-input"
                         placeholder="$ Amount to Withdraw">
                     <button id="btn-withdraw"
                         class="bg-sky-700 hover:bg-amber-600 text-white px-8 py-2 rounded-lg font-bold">Withdraw</button>
@@ -53,6 +56,8 @@
             </div>
         </section>
     </main>
+    <script src="js/deposit.js"></script>
+    <script src="js/withdraw.js"></script>
 </body>
 
 </html>
