money withdraw section added

--- a/bank.html
+++ b/bank.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="bg-yellow-400 p-8 rounded-xl">
                     <h4 class="text-2xl">Withdraw</h4>
-                    <h2 class="text-5xl">$00</h2>
+                    <h2 class="text-5xl">$<span id="withdraw-total">00</span></h2>
                 </div>
                 <div class="bg-violet-400 p-8 rounded-xl">
                     <h4 class="text-2xl">Balance</h4>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 hover:from-pink-500 hover:to-yellow-500 ... p-8 rounded-xl">
                     <h4 class="text-2xl mb-3 text-white">Please Withdraw</h4>
-                    <input class="w-9/12 block mb-4 px-3 py-2 rounded-lg" type="email" name="" id="withdraw-amount-input"
+                    <input class="w-9/12 block mb-4 px-3 py-2 rounded-lg" type="email" name="" id= "withdraw-input"
                         placeholder="$ Amount to Withdraw">
                     <button id="btn-withdraw"
                         class="bg-sky-700 hover:bg-amber-600 text-white px-8 py-2 rounded-lg font-bold">Withdraw</button>
