password and email validation has been added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<body>
+<body class="bg-lime-50">
     <header>
                <h1 class="text-5xl text-center mt-6 ">
                       Welcome to your <span class="font-semibold text-violet-600">BD Bank</span>
