--- a/bank.html
+++ b/bank.html
@@ -9,10 +9,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class = "bg-lime-50" >
     <header>
-        <h1 class="text-5xl text-center mt-6 ">
-            Let's Get Some <span class="font-semibold text-violet-600">Money</span>
+        <h1 class="text-5xl text-center mt-10 mb-10 ">
+            Let's Get Some <span class="font-semibold text-violet-600">Money !!!</span>
         </h1>
     </header>
     <main>
